--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
         "json-simple-1.1.1.jar",
         "socket_programming/lib/json-simple-1.1.1.jar"
     ],
-    "editor.fontSize": 14
+    "editor.fontSize": 14,
 }
