--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,4 +8,5 @@
         "socket_programming/lib/json-simple-1.1.1.jar"
     ],
     "editor.fontSize": 14,
+    "java.dependency.packagePresentation": "hierarchical",
 }
