--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
     "java.project.sourcePaths": [
-        "socket_programming"
+        "src"
     ],
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "json-simple-1.1.1.jar",
-        "socket_programming/lib/json-simple-1.1.1.jar"
+        "src/lib/json-simple-1.1.1.jar"
     ],
     "editor.fontSize": 14,
     "java.dependency.packagePresentation": "hierarchical",
